# DesktopWaifu

./: .gitignore  .vercelignore  AGENTS.md  README.md  electrobun.config.ts  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
data/: voicebox.db
docs/: ELECTROBUN_DPI_FIX_GUIDE.md  ELECTROBUN_MIGRATION_NOTES.md  ELECTROBUN_PATCHES.md  ELECTROBUN_RESEARCH.md  LINUX_SUPPORT_PLAN.md
genie-tts/: .gitignore  README.md  build_windows_installer.py  build_windows_onedir.py  default-model.json  genie_compat_api.py  genie_compat_onedir.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  runtime_paths.py  server.js  split_text.py  start_genie_server.py  transcribe_reference.py
genie-tts/bundled-wave-presets/riko/: metadata.json
genie-tts/installer/windows/: desktopwaifu-genie-compat.iss
genie-tts/public/: app.js  index.html  styles.css
installer/windows/: desktopwaifu.iss
patches/electrobun/: build.ts
scripts/: apply-electrobun-patches.mjs  build-windows-installer.mjs  fix-windows-setup-extractor.mjs  write-windows-manifests.mjs
src/: app.css  app.html
src/bun/: electrobun-runtime.ts  fish.ts  index.ts  windows-click-through.ts
src/lib/components/: ChatBar.svelte  ChatLog.svelte  MenuFab.svelte  SettingsPanel.svelte  SpeechBubble.svelte  SplashModal.svelte  VrmCanvas.svelte
src/lib/electrobun/: bridge.ts  rpc-schema.ts
src/lib/llm/: client.ts
src/lib/memory/: manager.ts
src/lib/storage/: index.ts
src/lib/stores/: app.svelte.ts
src/routes/: +layout.svelte  +page.svelte
(+20 files in other folders)
